--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       context: ./account
       target: builder
     image: account
+    env_file: .env.dev 
     expose:
       - "8080"
     labels:
