--- a/MakeFile
+++ b/MakeFile
@@ -1,38 +1,53 @@
-# Makefile
+# Makefile for project
 
-.PHONY: all
+# Variables
+PWD := $(shell pwd)
+ACCTPATH := $(PWD)/account
+ENV := test
 
-# Define targets
-all: get_hello get_signin post_signup post_image post_details put_details delete_image
+# Phony targets
+.PHONY: all create-keypair test \
+	get_hello get_signin post_signup \
+	post_image post_details put_details \
+	delete_image
 
-# GET request to /api/account/me 
+# Default target
+all: create-keypair test
+
+# Target to create RSA key pair
+create-keypair:
+	@echo "Creating an RSA 2048 key pair"
+	openssl genpkey -algorithm RSA -out $(ACCTPATH)/rsa_private_$(ENV).pem -pkeyopt rsa_keygen_bits:2048
+	openssl rsa -in $(ACCTPATH)/rsa_private_$(ENV).pem -pubout -out $(ACCTPATH)/rsa_public_$(ENV).pem
+
+# Target to run tests
+test:
+	go test -v ./service/...
+
+# Target for GET request to /api/account/me
 get_hello:
-	curl.exe -X GET "http://malcorp.test/api/account/me"
+	curl -X GET "http://malcorp.test/api/account/me"
 
-# GET request to /api/account/signin
+# Target for GET request to /api/account/signin
 get_signin:
-	curl.exe -X GET "http://malcorp.test/api/account/signin"
+	curl -X GET "http://malcorp.test/api/account/signin"
 
-# POST request to /api/account/signup
+# Target for POST request to /api/account/signup
 post_signup:
-	curl.exe -X POST "http://malcorp.test/api/account/signup"
+	curl -X POST "http://malcorp.test/api/account/signup"
 
-# POST request to /api/account/image
+# Target for POST request to /api/account/image
 post_image:
-	curl.exe -X POST "http://malcorp.test/api/account/image" 
+	curl -X POST "http://malcorp.test/api/account/image" 
 
-# POST request to /api/account/details
+# Target for POST request to /api/account/details
 post_details:
-	curl.exe -X POST "http://malcorp.test/api/account/details"
+	curl -X POST "http://malcorp.test/api/account/details"
 
-# PUT request to /api/account/details
+# Target for PUT request to /api/account/details
 put_details:
-	curl.exe -X PUT "http://malcorp.test/api/account/details"
+	curl -X PUT "http://malcorp.test/api/account/details"
 
-# DELETE request to /api/account/image
+# Target for DELETE request to /api/account/image
 delete_image:
-	curl.exe -X DELETE "http://malcorp.test/api/account/image"
-
-#test a particular file
-service_test:
-    go test -v ./service/...
+	curl -X DELETE "http://malcorp.test/api/account/image"
