--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       # So that Traefik can listen to the Docker events
       - /var/run/docker.sock:/var/run/docker.sock
 
-  postgres-auth:
+  postgres-account:
     image : "postgres:alpine"
     environment:
       - POSTGRES_PASSWORD=postgres
@@ -27,7 +27,7 @@ services:
   # Volume for data and initial sql script
   # Configure initial db for future demo
     volumes:
-      - "pgdata_auth:/var/lib/postgresql/data"
+      - "pgdata_account:/var/lib/postgresql/data"
       # - ./init:/docker-entrypoint-initdb.d/
     command: ["postgres", "-c", "log_statement=all"] 
   account:
@@ -35,7 +35,7 @@ services:
       context: ./account
       target: builder
     image: account
-    env_file: .env.dev 
+    env_file: ./account/.env.dev 
     expose:
       - "8080" 
     labels:
@@ -47,10 +47,10 @@ services:
       - ./account:/go/src/app
 
     depends_on:
-      - postgres-auth
+      - postgres-account
 
     # have to use $$ (double-dollar) so docker does't try to substitute a variable
     command: reflex -r "\.go$$" -s -- sh -c "go run ./"
 
 volumes:
-  pgdata_auth:
+  pgdata_account:
